--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -2,3 +2,7 @@
     font-family: Verdana, DejaVu Sans ,sans-serif;
     background-color: hsl(0, 82%, 78%);
 }
+
+.cool-para {
+    font-size: 24px;
+}
