--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -6,3 +6,14 @@
 .cool-para {
     font-size: 24px;
 }
+
+#div1 {
+    color: hsl(240, 87%, 43%);
+    font-size: 36px;
+}
+
+#div2 {
+    font-size: 24px;
+    font-weight: bold;
+    background-color: hsl(120, 95%, 76%);
+}
