Fix para font-family

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,5 +1,5 @@
 .para {
-    font-family: Verdana, DejaVu Sans ,sans-serif;
+    font-family: Verdana, "DejaVu Sans" ,sans-serif;
     background-color: hsl(0, 82%, 78%);
 }
 
