--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -3,3 +3,12 @@
     font-size: 28px;
     font-family: Helvetica, 'Times New Roman',sans-serif;
 }
+
+.btn1 {
+    background-color: black;
+    color: white;
+}
+
+.btn2 {
+    background-color: yellow;
+}
