--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 52px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.plant {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  flex-basis: 200px;
 }
 
 /* do not edit this footer */
