--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -23,4 +26,48 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+  padding: 4px 12px;
+}
+
+button {
+  margin: 12px;
+  padding: 8px;
+}
+
+a {
+  text-decoration: none;
+  color: hsl(0, 0%, 64%);
+}
+
+.header {
+  display: flex;
+  padding: 4px;
+}
+
+.left-links{
+  margin-right: auto;
+}
+
+.footer {
+  display: flex;
+  padding: 4px;
+  background-color: #eeeeee;
+}
+
+.content{
+  align-self: center;
+}
+
+.input,
+.buttons {
+  display: flex;
+  justify-content: center;
 }
