--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,65 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* added styles */
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+
+li {
+  list-style-type: none;
+  padding: 8px 0px;
+}
+
+ul {
+  padding: 0px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidebar {
+  min-width: 300px;
+  padding: 16px;
+}
+
+.main-container {
+  display: flex;
+  margin-right: 130px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 250px;
+  justify-content: space-between;
+  align-content: space-around;
+  padding: 48px;
+}
+
+.card {
+  width: 250px;
+  height: 250px;
+  margin: 16px;
+}
